2015-08-25  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * doc/whats-new-2.0.rst: Many updates from `diff`ing the `--help` output of
   version 1.4.1 vs now.

2015-08-27  Titus Brown  <titus@idyll.org>

  * doc/dev/getting-started.rst: fixed a few misspellings.

2015-08-26  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * tests/test_scripts.py: removed the unused `_DEBUG_make_graph` function in
   favor of other debugging methods like `ipdb`. Added
   test_do_partition_no_big_traverse and test_extract_paired_reads_unpaired.

2015-08-24  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/khmer_args.py: Replaced sanitize_epilog() with santize_help() that
   reflows the text of ArgParse descriptions and epilog while preserving the
   formatting. Enhanced removal of Sphinx directives by replacing double
   backticks with the double quote character.
   * scripts/*.py: Renamed sanitize_epilog to sanitize_help; leading newlines
   from triple-quoted epilogs removed; formatting made consistent;
   sanitize_help and ComboFormatter added where it was missing; a couple
   script specific epilog reformatting (for use of `:doc:` and a
   hyperlink).
   * scripts/{count-median,filter-abund-single}.py: Fixed printing of output
   file name to do so instead of printing information about the file handle.
   * scripts/count-median.py: Added missing command so that example given
   actually works.
   * scripts/filter-abund-single.py: Removed redundant printing of output file
   names.
   * scripts/normalize-by-median.py: Removed unused option "-d" from an example
   command (left over from the "--dump-frequency" era).
   * scripts/{partition-graph.py,do-partition.py}: Fixed erasure of the queue
   module name in the worker functions, which is necessary for basic
   functionality.
   * scripts/{do-partition,abundance-dist,abundance-dist-single,
   extract-long-sequences}.py: Added an example command to the epilog.
   * tests/khmer_tst_utils.py: Added 'name' attribute to make the fake