@@ -1,1 +1,0 @@
-See ../doc/scripts.txt for basic documentation.
